--- a/rag_langchain_demo.ipynb
+++ b/rag_langchain_demo.ipynb
@@ -128,65 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "4eedf109-bfb3-4dd2-aeb0-3065e2b28898",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Answer: Norway\n"
-     ]
-    }
-   ],
-   "source": [
-    "ask(\"Where is Kongsberg from?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "bfa05716-5caf-43b6-9def-d043cedc098d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Answer: Geir Hy\n"
-     ]
-    }
-   ],
-   "source": [
-    "ask(\"Who is the CEO of Kongsberg\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "b7343d80-8ad9-4f8d-b541-ab01ee497ba9",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Answer: Kongsberg Maritime Kongsberg Defence & Aerospace Kongsberg Discovery Kongsberg Digital\n"
-     ]
-    }
-   ],
-   "source": [
-    "ask(\"What 4 braches are there to Kongsberg?\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "90310dd5-ea9a-4ee9-badf-8c6736d82434",
+   "id": "02fc816e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Uncomment to ask the question\n",
+    "# ask(\"What is (example.txt title) known for?)\")"
+   ]
   }
  ],
  "metadata": {
